--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "embla-carousel-react": "^8.3.0",
     "graphql": "^16.9.0",
     "graphql-config": "^5.1.2",
+    "graphql-ws": "^5.16.0",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
